[gd_scene load_steps=2 format=3 uid="uid://level_select_scene"]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1_levelselect"]

[node name="LevelSelect" type="CanvasLayer"]
process_mode = 3
layer = 16
script = ExtResource("1_levelselect")

[node name="DimBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 0.95)

[node name="Panel" type="Panel" parent="DimBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DimBackground/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="DimBackground/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "SELECT STAGE"
horizontal_alignment = 1

[node name="StagePanel" type="Panel" parent="DimBackground/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PortraitContainer" type="CenterContainer" parent="DimBackground/Panel/VBoxContainer/StagePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0

[node name="Portrait" type="ColorRect" parent="DimBackground/Panel/VBoxContainer/StagePanel/PortraitContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
color = Color(0.1, 0.1, 0.18, 1)

[node name="PortraitLabel" type="Label" parent="DimBackground/Panel/VBoxContainer/StagePanel/PortraitContainer/Portrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="DimBackground/Panel/VBoxContainer/StagePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="DimBackground/Panel/VBoxContainer/StagePanel/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "THE PIT"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="DimBackground/Panel/VBoxContainer/StagePanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Where it all begins. Basic enemies and learning the ropes."
horizontal_alignment = 1
autowrap_mode = 2

[node name="WavesLabel" type="Label" parent="DimBackground/Panel/VBoxContainer/StagePanel/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Waves: 10 + Boss"
horizontal_alignment = 1

[node name="NavContainer" type="HBoxContainer" parent="DimBackground/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="PrevButton" type="Button" parent="DimBackground/Panel/VBoxContainer/NavContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "<"

[node name="DotsContainer" type="HBoxContainer" parent="DimBackground/Panel/VBoxContainer/NavContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 15

[node name="NextButton" type="Button" parent="DimBackground/Panel/VBoxContainer/NavContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ">"

[node name="StartButton" type="Button" parent="DimBackground/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "START"

[node name="LockedOverlay" type="ColorRect" parent="DimBackground/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="LockLabel" type="Label" parent="DimBackground/Panel/LockedOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "LOCKED
Beat The Pit first"
horizontal_alignment = 1
vertical_alignment = 1
